tests/paczka1/small_fuzzy/32871277.err
Error in line 7: SHwj S849 60,9
Error in line 8: SHwj A966 85,9
Error in line 9: SHwj A481 95,6
